# laniakea-protocol

./: .env  .env.example  .gitignore  .gitignore.new  .pre-commit-config.yaml  ANALYSIS_FINDINGS.md  ANALYSIS_REPORT.md  API_DOCUMENTATION.md  API_EXAMPLES.md  ARCHITECTURE.md  ARCHITECTURE_INTEGRATION_V0.0.01.md  ARCHITECTURE_OVERVIEW_V0.0.01.md  ARCHITECTURE_V0.0.03.md  BUG_ANALYSIS.md  BUG_FIXES_AND_IMPROVEMENTS.md  CHANGELOG.md  CHANGELOG_V4.md  CHANGELOG_v0.0.01.md  CHANGELOG_v0.0.02.md  CHANGELOG_v0.0.1.md  COMPLETE_EVOLUTION_ALGORITHM.md  COMPREHENSIVE_FEATURES_GUIDE_V0.0.01.md  CONSOLIDATED_DOCUMENTATION_V0.0.01.md  CONTRIBUTING.md  DEEP_ARCHITECTURE.md  DEEP_ARCHITECTURE_V2.0.md  DEPLOYMENT_REPORT.md  DEVELOPMENT_PLAN.md  DOCUMENTATION.md  DOCUMENTATION_v0.0.01.md  Dockerfile  Dockerfile.intelligent  Dockerfile.legacy  ENHANCED_REPORT_v0.0.01.md  ENHANCEMENT_SUMMARY_v0.0.02.md  ERRORS_AND_GAPS.md  EXTENDED_ARCHITECTURE.md  FINAL_DOCUMENTATION_V0.0.03.md  FINAL_REPORT.md  FINAL_REPORT_v0.0.01.md  (+74 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml
analysis/: value_vector_analysis.py
archived_old_patterns/: blockchain.py  src_config_backup.py  test_api_and_pov.py  test_full_protocol.py  test_integration.py
data_node_5000/: wallet.pem
docs/: API_REFERENCE.md  ARCHITECTURE_V0.0.01.md  DEVELOPER_GUIDE.md  USER_MANUAL.md  WHITEPAPER.md  project_analysis.md  security_report.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE.md  README.md  unified_architecture.md
docs/deployment/: README.md
docs/guides/: README.md
examples/: scda_simulation.py
laniakea/: __init__.py
laniakea/achievements/: achievement_system.py  system.py
laniakea/ai/: __init__.py  model.py  problem_discovery_engine.py  solution_evaluator.py
laniakea/analytics/: analytics.py
laniakea/api/: __init__.py  main.py  scda_api.py  scientific_api_connector.py
laniakea/blockchain/: core.py
laniakea/cli/: commands.py
laniakea/consensus/: __init__.py  poa.py  pohd.py  pov.py
laniakea/core/: blockchain.py  config.py  exceptions.py  hypercube_blockchain.py  models.py  scda_integration.py  smart_contract_vm.py  standards.py  token_system.py  unified_system.py  wallet.py
laniakea/crosschain/: bridge.py  cross_chain_bridge.py
laniakea/dashboard/: metrics.py
laniakea/defi/: swap.py
laniakea/evolution/: __init__.py  complete_evolution_manager.py  scda_evolution_manager.py
laniakea/external_apis/: api_integrations.py  integrations.py
laniakea/governance/: __init__.py  dao.py  metaverse_diplomacy.py
laniakea/identity/: __init__.py
laniakea/intelligence/: achievements_system.py  advanced_scda.py  ai_api.py  ai_worker.py  block_equation_solver.py  brain.py  digital_dna.py  ml_system.py  neural_network_scda.py  predictive_analytics.py  scda_enhanced.py  scda_model.py  scda_tier_system.py
laniakea/marketplace/: exchange.py  knowledge_market.py  nft.py
laniakea/metasystem/: cognitive_core.py
laniakea/metaverse/: __init__.py  advanced_metaverse.py  metaverse_integration.py
laniakea/monitoring/: metrics.py
laniakea/network/: api.py  llm_api_router.py  p2p_network.py  smart_contract_api.py
laniakea/quantum/: __init__.py  enhanced_quantum_system.py  processor.py
laniakea/reputation/: reputation_system.py
laniakea/security/: auth.py  authentication.py
laniakea/simulation/: __init__.py  cosmic.py  cosmic_simulator.py  scda_simulator.py
laniakea/social/: __init__.py  social_features.py
laniakea/storage/: database.py  database_extensions.py  database_setup.py  models.py
laniakea/utils/: config.py  logger.py  (+1 more)
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: health_check.py  problem_evaluate.py  problem_generate.py
src/: __init__.py  config.py  scda.py  scda_legacy.py
tests/: __init__.py  conftest.py  test_ai_modules.py  test_api_and_pov.py  test_api_endpoints.py  test_core_components.py  test_full_protocol.py  test_integration.py  test_mining_system.py  test_report.json  test_runner.py  test_scda_core.py  test_scda_evolution.py
web/: 3d-visualization.html  achievements.html  app.js  dashboard.html  index.html  index_v2.html  metaverse_8d_visualization.html  mining_dashboard.html  scda_dashboard.html  social_hub.html  styles.css
(+66 files in other folders)
